add categories page

--- a/_posts/2015-08-30-test-toc.md
+++ b/_posts/2015-08-30-test-toc.md
@@ -2,8 +2,8 @@
 layout: post
 title: Apache Spark
 modified:
-categories: 
-excerpt:
+categories: test3
+excerpt: "just for testing"
 comments: true
 tags: []
 image:
