--- a/_posts/2015-08-31-test.md
+++ b/_posts/2015-08-31-test.md
@@ -2,8 +2,8 @@
 layout: post
 title: Test
 modified:
-categories: 
-excerpt:
+categories: test2
+excerpt: "just for testing"
 comments: true
 tags: []
 image:
